--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,10 @@
         tools:targetApi="31">
         <activity
             android:windowSoftInputMode="adjustResize"
-            android:name=".presentation.ShopItemActivity"
+            android:name=".presentation.activity.ShopItemActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.activity.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
